# RealTimeChatApp

./: LICENSE  README.md
chat-app-client/: index.html  package.json
chat-app-client/src/: style.css
chat-app-client/src/scripts/: main.ts  util.ts
client/: .env  index.html  package-lock.json  vite.config.ts
client/src/: style.css
client/src/scripts/: main.ts  util.ts
server/: Cargo.toml  config.toml  index.js  package.json
server/src/: lobby.rs  main.rs  messages.rs  ws.rs
